--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    
+    <main>
+        <section id="telefone">
+
+        </section>
+        <section id="redes-socias">
+
+        </section>
+    </main>
 </body>
 </html>
