--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
             <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
         </section>
         <section id="redes-socias">
-
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt=""></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""></a>
         </section>
     </main>
 </body>
