--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
         </section>
         <section id="redes-socias">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""></a>
+            <a href="logo.html" target="tela"><img src="imagens/logo-home.jpg" id="logo"></a><br>
+            <a href="insta.html" target="tela"><img src="imagens/logo-instagram.jpg" id="insta"></a><br>
+            <a href="ytb.html" target="tela"><img src="imagens/logo-youtube.jpg" id="ytb"></a><br>
+            <a href="git.html" target="tela"><img src="imagens/logo-github.jpg" id="git"></a>
         </section>
     </main>
 </body>
